[package]
name = "ppbert"
description = "Simple pretty printer for Erlang's External Term Format"
homepage = "https://github.com/gnuvince/ppbert"
version = "0.9.2"
license = "MIT"
authors = ["Vincent Foley <vfoley@gmail.com>"]

[dependencies]
num-bigint = "0.2"
num-traits = "0.2"
encoding = "0.2"
byteorder = "1.2"
itoa = "0.4"
ryu = "0.2.6"
getopts = "0.2"

[[bin]]
name = "ppbert"
path = "src/main.rs"
bench = false

[profile.release]
debug = true
lto = true
panic = "abort"
