[package]
name = "ppbert"
description = "Simple pretty printer for Erlang's External Term Format"
homepage = "https://github.com/gnuvince/ppbert"
version = "0.12.1"
license = "MIT"
authors = ["Vincent Foley <vfoley@gmail.com>"]
edition = "2018"

[dependencies]
num-bigint = "0.2"
num-traits = "0.2"
encoding = "0.2"
byteorder = "1.3"
itoa = "0.4"
ryu = "1.0"
gumdrop = "0.8"

[[bin]]
name = "ppbert"
path = "src/main.rs"
bench = false

[profile.release]
debug = true
lto = "thin"
panic = "abort"
